# claude-control-terminal

./: .gitignore  .golangci.yml  200.html  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  IMPLEMENTATION_PLAN_PERMISSIONS.md  LICENSE  LIVE_AGENTS_IMPLEMENTATION.md  MIGRATION_STATUS.md  Makefile  NOTIFICATION_HOOKS_PLAN.md  README.md  TESTING.md  TEST_CATEGORIES.sh  TEST_QUICK.sh  TOOL_HOOKS_PLAN.md  TUI_IMPLEMENTATION_SUMMARY.md  USER_AUTHENTICATION.md  codecov.yml  go.mod  go.sum  index.html  justfile  settings.local.json
.github/: homebrew-formula.rb.template  pull_request_template.md
_nuxt/: 96f6zy69.js  AWnyIvc-.js  B04E4YjR.js  B0uXS2Oy.js  B4v5SkDU.js  B8wvB2ky.js  BPgk7PpS.js  BkWiV1gF.js  By8XT4dv.js  C4lgKHBM.js  CEcTfBJ_.js  CNjK5OfE.js  CZhuxTVe.js  CcGSiE8X.js  ChMVqQFy.js  CiyHnOzA.js  D6NPRcLj.js  DABbF0Yt.js  DL6_MVyq.js  DQIBtZnF.js  DQdMJaPC.js  DeO5CoeE.js  Dfo3bB10.js  DkKnh9he.js  DnGO8tzA.js  DwMIp_at.js  W83HKiaB.js  Xk4d3FY_.js  entry.BFR6IzRB.css  entry.BV9K7eNc.css  entry.CIDJnqh6.css  entry.CNNR_EJi.css  entry.CbgOnPut.css  entry.CtIQ3fwR.css  entry.KsxilPY6.css  entry.kleeGHe_.css  f-7xsFGG.js  nE6n1ZsF.js  uwd3e0Zk.js  vBO168fq.js
agents_server/: pyproject.toml
agents_server/src/: agent_manager.py  auth.py  main.py  models.py  session.py
docs/: DATABASE_CONSOLIDATION_PLAN.md  HOMEBREW_SETUP.md  MERGE_PLAN.md  (+11 more)
internal/agents/agents_server/: .gitignore  README.md  main.py  pyproject.toml
internal/agents/agents_server/src/: agent_loader.py  agent_manager.py  config.py  main.py  models.py  persistence.py  session.py
(+256 files in other folders)
