[project]
name = "agents-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "claude-agent-sdk>=0.1.4",
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]
